hphp/test/zend/good/ext/sockets/tests/socket_set_option_rcvtimeo.php.skipif
<?php
if (!extension_loaded('sockets')) {
        die('SKIP sockets extension not available.');
}
?>