hphp/test/zend/bad/ext/sockets/tests/socket_import_stream-4.php.skipif
<?php
if (!extension_loaded('sockets')) {
	die('SKIP sockets extension not available.');
}
if(substr(PHP_OS, 0, 3) == 'WIN' ) {
  die("skip Not Valid for Windows");
}